sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:12: error: not found: value n
      copy(n-1,n)
           ^AlgShellSort:12: error: not found: value n
      copy(n-1,n)
               ^AlgShellSort:15: error: not found: value n
   setValue(n,v)
            ^